# FSD-Final_Project

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  SESSION_CONTEXT.md  agents.md  implementation_plan.md  master_class.md  package-lock.json  package.json  render.yaml  study_guide.md  task.md  viva.md
.gemini/: settings.json
.github/: copilot-instructions.md
LinksBackend/: main.py  pyproject.toml
LinksBackend/Scripts/: imagefallback.py  images.py  links.py  videosfallback.py
backend/: .env.example  list_models.js  package-lock.json  package.json  seed.js  seed_admin.js  seed_curriculum.js  seed_diagrams.js  seed_ncert_content.js  seed_pdfs.js  seed_star_levels.js  seed_videos.js  server.js  server_extend.js  server_extended.js  test_gemini.js  test_new_sdk.js  test_sdk_thoughts.js
backend/.gemini/: system.md
backend/middleware/: auth.js
backend/models/: Curriculum.js  KnowledgeGraph.js  Leaderboard.js  Progress.js  Quiz.js  SavedLinks.js  SpacedRepetition.js
backend/routes/: auth.js  chat.js  curriculum.js  feynman.js  index.js  knowledgeGraph.js  leaderboard.js  links.js  progress.js  quiz.js  spacedRepetition.js
backend/seed_parts/: part01_header.js  part02_class1_2.js  part03_class3.js  part04_class4.js  part05_class5.js  part06_class6.js  part07_class7.js  part08_class8.js  part09_class9.js  part10_class10.js  part11_class11.js  part12_class12.js  part13_quiz_primary.js  (+10 more)
chroma-backend/: main.py  pyproject.toml
chroma-backend/Scripts/: embedder.py  ncert_ingest.py
frontend/: .env.example  eslint.config.js  package-lock.json  package.json
(+131 files in other folders)
