[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.13.0",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "requests>=2.33.1",
    "selenium>=4.41.0",
    "uvicorn>=0.44.0",
    "yt-dlp>=2026.3.17",
]
